@@ -1,0 +1,4 @@
+from Products.CMFPlone import MigrationTool
+from evolve import Evolve
+
+MigrationTool.registerSetupWidget(Evolve)
